--- a/About.html
+++ b/About.html
@@ -77,6 +77,7 @@
             <li><a href="documentation.html" class="sidebar-link">Documentation</a></li>
             <li><a href="gallery.html" class="sidebar-link">Gallery</a></li>
             <li><a href="download.html" class="sidebar-link">Download</a></li>
+             <li><a href="developer.html" class="sidebar-link">Developer</a></li>
         </ul>
     </div>
 
@@ -105,58 +106,69 @@
     <p class="about-description">
         Sheikh Tais Academy stands as a beacon of educational excellence — a place where traditional values meet modern methodologies. Our students are encouraged to not just study but to think critically, solve problems, and dream beyond limitations. Our teachers are mentors, guiding students through academic challenges while instilling discipline, empathy, and leadership skills.
     </p>
-
+    
     <h3 class="subsection-title">Our Mission</h3>
+    <hr>
     <p class="about-description">
         Our mission is to provide high-quality, holistic education that empowers every student to become a confident, creative, and responsible global citizen. We aim to nurture intellectual curiosity, build strong moral values, and prepare students to make meaningful contributions to society. Through personalized learning, mentorship, and community engagement, we help students grow into lifelong learners and leaders.
     </p>
-
+   
     <h3 class="subsection-title">Our Vision</h3>
+    <hr>
     <p class="about-description">
         Our vision is to be the leading educational institution in Sierra Leone — known for academic excellence, innovation, and integrity. We aspire to produce graduates who not only excel academically but who also demonstrate compassion, social responsibility, and the courage to bring positive change to their communities and the world.
     </p>
 
     <h3 class="subsection-title">Our Curriculum</h3>
+    <hr>
     <p class="about-description">
         Our curriculum is carefully designed to balance academic rigor with practical life skills. We offer a wide range of subjects including Mathematics, English, Literature, Sciences, Social Studies, ICT, Creative Arts, and Physical Education. To prepare our students for the future, we have recently added programs in Robotics, Coding, and Entrepreneurship, giving them hands-on experience with real-world problem-solving.
     </p>
 
     <h3 class="subsection-title">Facilities & Learning Environment</h3>
+    <hr>
     <p class="about-description">
         Sheikh Tais Academy features modern classrooms, science laboratories, a fully stocked library, computer labs with high-speed internet, and spacious outdoor areas for sports and recreation. Our campus is designed to be safe, inclusive, and inspiring — creating a space where students feel motivated to learn and grow every day.
     </p>
 
     <h3 class="subsection-title">Extracurricular Activities</h3>
+    <hr>
     <p class="about-description">
         We believe education extends beyond the classroom. Students have the opportunity to join clubs and teams such as Debate Club, Science Club, Drama Society, Sports Teams, and Community Service Groups. These activities build confidence, teamwork, and leadership skills while allowing students to explore their passions and talents.
     </p>
 
     <h3 class="subsection-title">Our Students</h3>
+    <hr>
     <p class="about-description">
-        We are proud to be home to over 700 students from diverse backgrounds. Our student body is a vibrant community where ideas, cultures, and perspectives are shared freely. Each child is given personalized attention to ensure they reach their full potential, whether academically, socially, or emotionally.
+        We are proud to be home to over 5000+ students from diverse backgrounds. Our student body is a vibrant community where ideas, cultures, and perspectives are shared freely. Each child is given personalized attention to ensure they reach their full potential, whether academically, socially, or emotionally.
     </p>
 
     <h3 class="subsection-title">Our Teachers</h3>
+    <hr>
     <p class="about-description">
         Our faculty is made up of dedicated educators with a passion for teaching and mentoring. They are trained not only in subject expertise but also in child development, modern pedagogy, and emotional intelligence — ensuring that every student feels seen, heard, and supported.
     </p>
 
     <h3 class="subsection-title">Achievements & Alumni</h3>
+    <hr>
     <p class="about-description">
         Since 2008, our graduates have gone on to excel in universities, careers, and leadership roles both locally and internationally. Many have become doctors, engineers, entrepreneurs, educators, and innovators, embodying the values they learned at Sheikh Tais Academy and making a difference in their communities.
     </p>
 
     <h3 class="subsection-title">Future Plans</h3>
+    <hr>
     <p class="about-description">
         Sheikh Tais Academy is constantly growing and evolving. We are currently expanding our campus to include a Science & Technology Innovation Center, a multipurpose event hall, and additional outdoor learning spaces. We are also integrating AI-assisted learning platforms to provide a more personalized educational experience for our students.
     </p>
 
     <h3 class="subsection-title">Community & Values</h3>
+    <hr>
     <p class="about-description">
         Community engagement is at the heart of what we do. We partner with parents, local leaders, and organizations to create scholarship programs, health awareness campaigns, and outreach initiatives. Our students regularly participate in projects that promote sustainability, kindness, and civic responsibility — turning learning into meaningful action.
     </p>
 
     <h3 class="subsection-title">Why Choose Us</h3>
+    <hr>
     <p class="about-description">
         Choosing Sheikh Tais Academy means choosing a place where your child will be challenged, supported, and inspired. We are not just a school — we are a family, a hub of innovation, and a stepping stone to a bright future. Together, we are shaping tomorrow’s leaders today.
     </p>
@@ -312,7 +324,7 @@
             </div>
             
             <div class="footer-bottom">
-                <p>&copy; 2024 Sheikh Tais Academy. All rights reserved.</p>
+                <p>&copy; 2025 Sheikh Tais Academy. All rights reserved.</p>
             </div>
         </div>
     </footer>
