--- a/contact.html
+++ b/contact.html
@@ -78,6 +78,7 @@
             <li><a href="gallery.html" class="sidebar-link">Gallery</a></li>
             <li><a href="download.html" class="sidebar-link">Download</a></li>
             <li><a href="developer.html" class="sidebar-link">Developer</a></li>
+            <li><a href="contact.html" class="sidebar-link active">Contact</a></li>
         </ul>
     </div>
 
@@ -265,7 +266,7 @@
             </div>
             
             <div class="footer-bottom">
-                <p>&copy; 2024 Sheikh Tais Academy. All rights reserved.</p>
+                <p>&copy; 2025 Sheikh Tais Academy. All rights reserved.</p>
             </div>
         </div>
     </footer>
