--- a/developer.html
+++ b/developer.html
@@ -393,7 +393,7 @@
             <!-- Hero Section -->
             <section class="hero-section animate-fade-in">
                 <div class="hero-content">
-                    <img src="https://i.imghippo.com/files/eyr9602wKg.jpg" alt="Developer Photo" class="developer-image">
+                    <img src="/dev/IMG_20250911_120804~2.jpg" alt="Developer Photo" class="developer-image">
                     <h1>Meet the Developer</h1>
                     <p>Passionate Full-Stack Developer & Mobile App Specialist</p>
                     <p>Creating innovative solutions for educational institutions,ai platforms and more</p>
@@ -547,7 +547,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 Sheikh Tais Academy Developer Portfolio. All rights reserved.</p>
+            <p>&copy; 2025 Sheikh Tais Academy Developer Portfolio. All rights reserved.</p>
             <p style="margin-top: 0.5rem; opacity: 0.8;">Built with passion for education and technology</p>
         </div>
     </footer>
