--- a/doc-exam-schedule.html
+++ b/doc-exam-schedule.html
@@ -378,19 +378,8 @@
                 <div class="class-header">
                     <h3 class="class-title">
                         <i class="fas fa-chalkboard-teacher"></i>
-                        Class 1 - Primary Level
+                        Class 1
                     </h3>
-                    <div class="class-actions">
-                        <button class="action-btn" onclick="editTimetable(1)" title="Edit Timetable">
-                            <i class="fas fa-edit"></i>
-                        </button>
-                        <button class="action-btn" onclick="printTimetable(1)" title="Print Timetable">
-                            <i class="fas fa-print"></i>
-                        </button>
-                        <button class="action-btn" onclick="deleteTimetable(1)" title="Delete Timetable">
-                            <i class="fas fa-trash"></i>
-                        </button>
-                    </div>
                 </div>
                 <div class="timetable-scroll">
                     <table class="timetable-table">
@@ -409,16 +398,16 @@
                                 <td><strong>8:00 - 8:45</strong></td>
                                 <td class="subject-cell">
                                     <div class="subject-name">Mathematics</div>
-                                    <div class="subject-teacher">Ms. Sarah</div>
-                                    <div class="subject-room">Room 101</div>
+                                    <div class="subject-teacher">Mr Dalton</div>
+                                    <div class="subject-room">Room 4</div>
                                 </td>
                                 <td class="subject-cell">
                                     <div class="subject-name">English</div>
-                                    <div class="subject-teacher">Mr. Ahmed</div>
-                                    <div class="subject-room">Room 102</div>
+                                    <div class="subject-teacher">Mr U-M-C</div>
+                                    <div class="subject-room">Room 4</div>
                                 </td>
                                 <td class="subject-cell">
-                                    <div class="subject-name">Science</div>
+                                    <div class="subject-name">Statiatics and probability</div>
                                     <div class="subject-teacher">Ms. Fatima</div>
                                     <div class="subject-room">Lab 1</div>
                                 </td>
@@ -461,7 +450,90 @@
                                     <div class="subject-room">Computer Lab</div>
                                 </td>
                             </tr>
-                            <!-- Additional periods can be added here -->
+                            <tr>
+                                <td><strong>8:45 - 9:30</strong></td>
+                                <td class="subject-cell">
+                                    <div class="subject-name">English</div>
+                                    <div class="subject-teacher">Mr. Ahmed</div>
+                                    <div class="subject-room">Room 102</div>
+                                </td>
+                                <td class="subject-cell">
+                                    <div class="subject-name">Mathematics</div>
+                                    <div class="subject-teacher">Ms. Sarah</div>
+                                    <div class="subject-room">Room 101</div>
+                                </td>
+                                <td class="subject-cell">
+                                    <div class="subject-name">Art</div>
+                                    <div class="subject-teacher">Ms. Aisha</div>
+                                    <div class="subject-room">Art Room</div>
+                                </td>
+                                <td class="subject-cell">
+                                    <div class="subject-name">Physical Education</div>
+                                    <div class="subject-teacher">Mr. Ali</div>
+                                    <div class="subject-room">Playground</div>
+                                </td>
+                                <td class="subject-cell">
+                                    <div class="subject-name">Computer</div>
+                                    <div class="subject-teacher">Mr. Tariq</div>
+                                    <div class="subject-room">Computer Lab</div>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td><strong>8:45 - 9:30</strong></td>
+                                <td class="subject-cell">
+                                    <div class="subject-name">English</div>
+                                    <div class="subject-teacher">Mr. Ahmed</div>
+                                    <div class="subject-room">Room 102</div>
+                                </td>
+                                <td class="subject-cell">
+                                    <div class="subject-name">Mathematics</div>
+                                    <div class="subject-teacher">Ms. Sarah</div>
+                                    <div class="subject-room">Room 101</div>
+                                </td>
+                                <td class="subject-cell">
+                                    <div class="subject-name">Art</div>
+                                    <div class="subject-teacher">Ms. Aisha</div>
+                                    <div class="subject-room">Art Room</div>
+                                </td>
+                                <td class="subject-cell">
+                                    <div class="subject-name">Physical Education</div>
+                                    <div class="subject-teacher">Mr. Ali</div>
+                                    <div class="subject-room">Playground</div>
+                                </td>
+                                <td class="subject-cell">
+                                    <div class="subject-name">Computer</div>
+                                    <div class="subject-teacher">Mr. Tariq</div>
+                                    <div class="subject-room">Computer Lab</div>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td><strong>8:45 - 9:30</strong></td>
+                                <td class="subject-cell">
+                                    <div class="subject-name">English</div>
+                                    <div class="subject-teacher">Mr. Ahmed</div>
+                                    <div class="subject-room">Room 102</div>
+                                </td>
+                                <td class="subject-cell">
+                                    <div class="subject-name">Mathematics</div>
+                                    <div class="subject-teacher">Ms. Sarah</div>
+                                    <div class="subject-room">Room 101</div>
+                                </td>
+                                <td class="subject-cell">
+                                    <div class="subject-name">Art</div>
+                                    <div class="subject-teacher">Ms. Aisha</div>
+                                    <div class="subject-room">Art Room</div>
+                                </td>
+                                <td class="subject-cell">
+                                    <div class="subject-name">Physical Education</div>
+                                    <div class="subject-teacher">Mr. Ali</div>
+                                    <div class="subject-room">Playground</div>
+                                </td>
+                                <td class="subject-cell">
+                                    <div class="subject-name">Computer</div>
+                                    <div class="subject-teacher">Mr. Tariq</div>
+                                    <div class="subject-room">Computer Lab</div>
+                                </td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
@@ -506,16 +578,148 @@
                     </div>
                     <div class="timetable-scroll">
                         <table class="timetable-table">
-                            <thead>
-                                <tr>
-                                    <th>Time</th>
-                                    <th>Monday</th>
-                                    <th>Tuesday</th>
-                                    <th>Wednesday</th>
-                                    <th>Thursday</th>
-                                    <th>Friday</th>
-                                </tr>
-                            </thead>
+                            <tbody>
+                            <tr>
+                                <td><strong>8:00 - 8:45</strong></td>
+                                <td class="subject-cell">
+                                    <div class="subject-name">Mathematics</div>
+                                    <div class="subject-teacher">Mr Dalton</div>
+                                    <div class="subject-room">Room 4</div>
+                                </td>
+                                <td class="subject-cell">
+                                    <div class="subject-name">English</div>
+                                    <div class="subject-teacher">Mr U-M-C</div>
+                                    <div class="subject-room">Room 4</div>
+                                </td>
+                                <td class="subject-cell">
+                                    <div class="subject-name">Statiatics and probability</div>
+                                    <div class="subject-teacher">Ms. Fatima</div>
+                                    <div class="subject-room">Lab 1</div>
+                                </td>
+                                <td class="subject-cell">
+                                    <div class="subject-name">Urdu</div>
+                                    <div class="subject-teacher">Mr. Hassan</div>
+                                    <div class="subject-room">Room 103</div>
+                                </td>
+                                <td class="subject-cell">
+                                    <div class="subject-name">Islamic Studies</div>
+                                    <div class="subject-teacher">Qari Usman</div>
+                                    <div class="subject-room">Room 104</div>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td><strong>8:45 - 9:30</strong></td>
+                                <td class="subject-cell">
+                                    <div class="subject-name">English</div>
+                                    <div class="subject-teacher">Mr. Ahmed</div>
+                                    <div class="subject-room">Room 102</div>
+                                </td>
+                                <td class="subject-cell">
+                                    <div class="subject-name">Mathematics</div>
+                                    <div class="subject-teacher">Ms. Sarah</div>
+                                    <div class="subject-room">Room 101</div>
+                                </td>
+                                <td class="subject-cell">
+                                    <div class="subject-name">Art</div>
+                                    <div class="subject-teacher">Ms. Aisha</div>
+                                    <div class="subject-room">Art Room</div>
+                                </td>
+                                <td class="subject-cell">
+                                    <div class="subject-name">Physical Education</div>
+                                    <div class="subject-teacher">Mr. Ali</div>
+                                    <div class="subject-room">Playground</div>
+                                </td>
+                                <td class="subject-cell">
+                                    <div class="subject-name">Computer</div>
+                                    <div class="subject-teacher">Mr. Tariq</div>
+                                    <div class="subject-room">Computer Lab</div>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td><strong>8:45 - 9:30</strong></td>
+                                <td class="subject-cell">
+                                    <div class="subject-name">English</div>
+                                    <div class="subject-teacher">Mr. Ahmed</div>
+                                    <div class="subject-room">Room 102</div>
+                                </td>
+                                <td class="subject-cell">
+                                    <div class="subject-name">Mathematics</div>
+                                    <div class="subject-teacher">Ms. Sarah</div>
+                                    <div class="subject-room">Room 101</div>
+                                </td>
+                                <td class="subject-cell">
+                                    <div class="subject-name">Art</div>
+                                    <div class="subject-teacher">Ms. Aisha</div>
+                                    <div class="subject-room">Art Room</div>
+                                </td>
+                                <td class="subject-cell">
+                                    <div class="subject-name">Physical Education</div>
+                                    <div class="subject-teacher">Mr. Ali</div>
+                                    <div class="subject-room">Playground</div>
+                                </td>
+                                <td class="subject-cell">
+                                    <div class="subject-name">Computer</div>
+                                    <div class="subject-teacher">Mr. Tariq</div>
+                                    <div class="subject-room">Computer Lab</div>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td><strong>8:45 - 9:30</strong></td>
+                                <td class="subject-cell">
+                                    <div class="subject-name">English</div>
+                                    <div class="subject-teacher">Mr. Ahmed</div>
+                                    <div class="subject-room">Room 102</div>
+                                </td>
+                                <td class="subject-cell">
+                                    <div class="subject-name">Mathematics</div>
+                                    <div class="subject-teacher">Ms. Sarah</div>
+                                    <div class="subject-room">Room 101</div>
+                                </td>
+                                <td class="subject-cell">
+                                    <div class="subject-name">Art</div>
+                                    <div class="subject-teacher">Ms. Aisha</div>
+                                    <div class="subject-room">Art Room</div>
+                                </td>
+                                <td class="subject-cell">
+                                    <div class="subject-name">Physical Education</div>
+                                    <div class="subject-teacher">Mr. Ali</div>
+                                    <div class="subject-room">Playground</div>
+                                </td>
+                                <td class="subject-cell">
+                                    <div class="subject-name">Computer</div>
+                                    <div class="subject-teacher">Mr. Tariq</div>
+                                    <div class="subject-room">Computer Lab</div>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td><strong>8:45 - 9:30</strong></td>
+                                <td class="subject-cell">
+                                    <div class="subject-name">English</div>
+                                    <div class="subject-teacher">Mr. Ahmed</div>
+                                    <div class="subject-room">Room 102</div>
+                                </td>
+                                <td class="subject-cell">
+                                    <div class="subject-name">Mathematics</div>
+                                    <div class="subject-teacher">Ms. Sarah</div>
+                                    <div class="subject-room">Room 101</div>
+                                </td>
+                                <td class="subject-cell">
+                                    <div class="subject-name">Art</div>
+                                    <div class="subject-teacher">Ms. Aisha</div>
+                                    <div class="subject-room">Art Room</div>
+                                </td>
+                                <td class="subject-cell">
+                                    <div class="subject-name">Physical Education</div>
+                                    <div class="subject-teacher">Mr. Ali</div>
+                                    <div class="subject-room">Playground</div>
+                                </td>
+                                <td class="subject-cell">
+                                    <div class="subject-name">Computer</div>
+                                    <div class="subject-teacher">Mr. Tariq</div>
+                                    <div class="subject-room">Computer Lab</div>
+                                </td>
+                            </tr>
+                        </tbody>
                             <tbody>
                                 <tr>
                                     <td><strong>8:00 - 8:45</strong></td>
