--- a/download.html
+++ b/download.html
@@ -69,15 +69,16 @@
                 <i class="fas fa-times"></i>
             </button>
         </div>
-<ul class="sidebar-menu">
+        <ul class="sidebar-menu">
             <li><a href="index.html" class="sidebar-link">Home</a></li>
             <li><a href="about.html" class="sidebar-link">About</a></li>
             <li><a href="features.html" class="sidebar-link">Features</a></li>
             <li><a href="news.html" class="sidebar-link">News</a></li>
             <li><a href="documentation.html" class="sidebar-link">Documentation</a></li>
             <li><a href="gallery.html" class="sidebar-link">Gallery</a></li>
-            <li><a href="download.html" class="sidebar-link">Download</a></li>
+            <li><a href="download.html" class="sidebar-link active">Download</a></li>
             <li><a href="developer.html" class="sidebar-link">Developer</a></li>
+              <li><a href="contact.html" class="sidebar-link">Contact</a></li>
         </ul>
     </div>
 
@@ -416,7 +417,7 @@
             </div>
             
             <div class="footer-bottom">
-                <p>&copy; 2024 Sheikh Tais Academy. All rights reserved.</p>
+                <p>&copy; 2025 Sheikh Tais Academy. All rights reserved.</p>
             </div>
         </div>
     </footer>
