--- a/news.html
+++ b/news.html
@@ -73,7 +73,7 @@
             <li><a href="index.html" class="sidebar-link">Home</a></li>
             <li><a href="about.html" class="sidebar-link">About</a></li>
             <li><a href="features.html" class="sidebar-link">Features</a></li>
-            <li><a href="news.html" class="sidebar-link">News</a></li>
+            <li><a href="news.html" class="sidebar-link active">News</a></li>
             <li><a href="documentation.html" class="sidebar-link">Documentation</a></li>
             <li><a href="gallery.html" class="sidebar-link">Gallery</a></li>
             <li><a href="download.html" class="sidebar-link">Download</a></li>
@@ -94,10 +94,11 @@
         <!-- News Content -->
         <section class="news-detailed section">
             <div class="container">
-                <!-- Featured News -->
-                <div class="featured-news">
-                    <h2 class="section-title">Featured News</h2>
-                    <article class="featured-article">
+                <!-- Recent News -->
+                <div class="recent-news">
+                    <h2 class="section-title">Recent Updates</h2>
+                    <div class="news-grid">
+                        <article class="featured-article">
                         <div class="featured-image">
                             <img src="/img/fire-breaking-news.jpg" alt="Annual Sports Day 2024" />
                         </div>
@@ -113,61 +114,6 @@
                             <a href="news-info-fire.html" class="read-more-btn">Read Full Article <i class="fas fa-arrow-right"></i></a>
                         </div>
                     </article>
-                </div>
-
-                <!-- Recent News -->
-                <div class="recent-news">
-                    <h2 class="section-title">Recent Updates</h2>
-                    <div class="news-grid">
-                        <article class="news-card detailed">
-                            <div class="news-image">
-                                <img src="/img/reminder-notification-message-alert_902106-3.jpg" alt="Parent-Teacher Meeting" />
-                            </div>
-                            <div class="news-content">
-                                <div class="news-meta">
-                                    <span class="news-date"><i class="fas fa-calendar"></i> December 10, 2024</span>
-                                    <span class="news-category">Academic</span>
-                                </div>
-                                <h3 class="news-title">Parent-Teacher Meeting Scheduled</h3>
-                                <p class="news-summary">Important parent-teacher meeting scheduled for discussing student progress and academic performance. All parents are requested to attend this important session.</p>
-                                <a href="article-parent-teacher-meeting.html" class="news-link">Read More <i class="fas fa-arrow-right"></i></a>
-                            </div>
-                        </article>
-                    </div>
-                </div>
-
-                <!-- News Categories -->
-                <div class="news-categories">
-                    <h2 class="section-title">Browse by Category</h2>
-                    <div class="categories-grid">
-                        <div class="category-card">
-                            <div class="category-icon">
-                                <i class="fas fa-graduation-cap"></i>
-                            </div>
-                            <h3 class="category-title">Academic</h3>
-                            <p class="category-count">12 Articles</p>
-                        </div>
-                        <div class="category-card">
-                            <div class="category-icon">
-                                <i class="fas fa-calendar-alt"></i>
-                            </div>
-                            <h3 class="category-title">Events</h3>
-                            <p class="category-count">8 Articles</p>
-                        </div>
-                        <div class="category-card">
-                            <div class="category-icon">
-                                <i class="fas fa-trophy"></i>
-                            </div>
-                            <h3 class="category-title">Achievements</h3>
-                            <p class="category-count">5 Articles</p>
-                        </div>
-                        <div class="category-card">
-                            <div class="category-icon">
-                                <i class="fas fa-mobile-alt"></i>
-                            </div>
-                            <h3 class="category-title">Technology</h3>
-                            <p class="category-count">3 Articles</p>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -242,7 +188,7 @@
             </div>
             
             <div class="footer-bottom">
-                <p>&copy; 2024 Sheikh Tais Academy. All rights reserved.</p>
+                <p>&copy; 2025 Sheikh Tais Academy. All rights reserved.</p>
             </div>
         </div>
     </footer>
