--- a/doc-school-rules.html
+++ b/doc-school-rules.html
@@ -77,6 +77,8 @@
             <li><a href="documentation.html" class="sidebar-link">Documentation</a></li>
             <li><a href="gallery.html" class="sidebar-link">Gallery</a></li>
             <li><a href="download.html" class="sidebar-link">Download</a></li>
+            <li><a href="developer.html" class="sidebar-link">Developer</a></li>
+            <li><a href="contact.html" class="sidebar-link">Contact</a></li>
         </ul>
     </div>
 
@@ -136,8 +138,7 @@
                             </h3>
                             <nav class="toc-nav">
                                 <a href="#code-of-conduct" class="toc-link">
-                                    <i class="fas fa-handshake"></i>
-                                    Code of Conduct
+                                    <i class="fas fa-handshake"></i>Code of Conduct
                                 </a>
                                 <a href="#attendance-policy" class="toc-link">
                                     <i class="fas fa-calendar-check"></i>
@@ -674,7 +675,7 @@
             </div>
             
             <div class="footer-bottom">
-                <p>&copy; 2024 Sheikh Tais Academy. All rights reserved.</p>
+                <p>&copy; 2025 Sheikh Tais Academy. All rights reserved.</p>
             </div>
         </div>
     </footer>
