--- a/documentation.html
+++ b/documentation.html
@@ -77,7 +77,9 @@
             <li><a href="documentation.html" class="sidebar-link active">Documentation</a></li>
             <li><a href="gallery.html" class="sidebar-link">Gallery</a></li>
             <li><a href="download.html" class="sidebar-link">Download</a></li>
+            <li><a href="developer.html" class="sidebar-link">Developer</a></li>
         </ul>
+          <li><a href="contact.html" class="sidebar-link">Contact</a></li>
     </div>
 
     <!-- Main Content -->
@@ -101,28 +103,28 @@
                             <div class="step-number">1</div>
                             <div class="step-content">
                                 <h3 class="step-title">Download the App</h3>
-                                <p class="step-description">Download the Sheikh Tais Academy app from our official download page.</p>
+                                <p class="step-description">Download the Sheikh Tais Academy app from our official download page. Click the sidebar buttonat the header and click download.</p>
                             </div>
                         </div>
                         <div class="step-card">
                             <div class="step-number">2</div>
                             <div class="step-content">
                                 <h3 class="step-title">Create Account</h3>
-                                <p class="step-description">Register using your student ID and school-provided credentials.</p>
+                                <p class="step-description">Signup Using your email and a password including your name + Account type it includes student,staff,parent choose select your Account type fill all fields and signup</p>
                             </div>
                         </div>
                         <div class="step-card">
                             <div class="step-number">3</div>
                             <div class="step-content">
                                 <h3 class="step-title">Verify Profile</h3>
-                                <p class="step-description">Complete your profile verification to access all features.</p>
+                                <p class="step-description">Complete your profile verification by clicking the button sent to your email to access all features. and now signin with the credentials you used to create your Account <hr><strong> note: once you clicked the button in the email sent to you exit the email app and return to the tais app and signin</strong></p>
                             </div>
                         </div>
                         <div class="step-card">
                             <div class="step-number">4</div>
                             <div class="step-content">
                                 <h3 class="step-title">Start Using</h3>
-                                <p class="step-description">Explore all features and stay connected with your academic journey.</p>
+                                <p class="step-description">Explore all features and stay connected with your academic journey. </p>
                             </div>
                         </div>
                     </div>
@@ -252,7 +254,7 @@
             </div>
             
             <div class="footer-bottom">
-                <p>&copy; 2024 Sheikh Tais Academy. All rights reserved.</p>
+                <p>&copy; 2025 Sheikh Tais Academy. All rights reserved.</p>
             </div>
         </div>
     </footer>
